<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <EditText
            android:id="@+id/editTextUser"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_user"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/textBackground"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.457"/>


    <EditText
            android:id="@+id/editTextPassword"
            android:hint="@string/edit_text_pass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textColorHint="@color/textBackground"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextUser" app:layout_constraintHorizontal_bias="0.457"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayout"/>

    <Button
            android:id="@+id/button_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/btn_login"
            android:typeface="sans"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" app:layout_constraintHorizontal_bias="0.462"/>

    <TextView
            android:id="@+id/textViewOR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/button_login" app:layout_constraintHorizontal_bias="0.501"/>

    <Button
            android:id="@+id/button_signup"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/oliveButton"
            android:text="@string/btn_create_user"
            app:layout_constraintTop_toBottomOf="@+id/textViewOR" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.457"/>


</android.support.constraint.ConstraintLayout>